--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,22 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.6.0'
+
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Mqtt物联网连接框架
     implementation files('libs/org.eclipse.paho.client.mqttv3-1.2.1.jar')
+
+    // 导入的腾讯IOT的SDK
+    implementation project(path: ':iot_explorer')
 }
