--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ allprojects {
     }
 }
 
+ext {
+
+    mqttJavaSdkVer = '1.1.0'
+
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
