--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,30 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
+
     defaultConfig {
         applicationId "com.ayuan.myutils"
-        minSdkVersion 29
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            ndk {
+                abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64'
+            }
+        }
     }
+
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -39,9 +48,9 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    // Mqtt物联网连接框架
-    implementation files('libs/org.eclipse.paho.client.mqttv3-1.2.1.jar')
-
     // 导入的腾讯IOT的SDK
     implementation project(path: ':iot_explorer')
+
+    // 腾讯云语音合成的依赖aar
+    implementation(name: 'libqcloudtts_1.2.8_release', ext: 'aar')
 }
